# VoxFlowAI_site_ver6

./: .gitignore  docker-compose.yml
backend/: .env  Dockerfile  alembic-help.txt  alembic.ini  create_admin.py  create_db_tables.py  pyproject.toml  run.py
backend/app/: auth.py  crud.py  database.py  main.py  middleware.py  models.py  schemas.py
backend/app/admin/: leads.py  reviews.py  users.py
backend/app/bot/: main.py
backend/app/core/: config.py
backend/app/routers/: applications.py  reviews.py
backend/app/services/: telegram_notifier.py
backend/data/: database.db
backend/migrations/: env.py
backend/migrations/versions/: 5aea56d7293e_initial.py  d7bb9a1a549a_initial_tables.py  e9146e42622d_add_is_published_field.py
frontend/: 404.html  README.md  about.html  add-review.html  blog-details.html  blog-details1.html  blog-details2.html  blog-details3.html  blog-details4.html  blog.html  chat-window-archive.txt  contact.html  docs.html  features.html  form.html  index.html  nginx.conf  package-lock.json  package.json  pricing.html  privacy-policy.html  products.html  robots.txt  sign-in.html  sitemap.xml  tailwind.config.js  terms-of-service.html  yandex_616ea0bf809ae63c.html
frontend/assets/css/: chat.css  output.css  reviews.css  styles.css
frontend/assets/js/: chat.js  chat_twin.js  custom.js  players.js  reviews-test.js  reviews_list.js  sent_contact_form.js  sent_form.js  sent_reviews.js
frontend/assets/txt/: faq_chatbots_voice_assistants2.txt
